[project]
name = "user-and-interests"
version = "0.1.0"
description = ""
authors = [
    {name = "Christine Lin",email = "lin.christine19@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask (>=3.1.2,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
